...
                    <view key="view" contentMode="scaleToFill" id="drr-Nu-NfT">
                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Логин" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="5H6-f7-gQx">
                                <rect key="frame" x="16" y="172" width="277" height="34"/>
                                <accessibility key="accessibilityConfiguration" identifier="loginTextField"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Пароль" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="51U-Bx-s8m">
                                <rect key="frame" x="16" y="214" width="277" height="34"/>
                                <accessibility key="accessibilityConfiguration" identifier="passwordTextField"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" restorationIdentifier="loginButton" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="W20-IO-T10">
                                <rect key="frame" x="160" y="288" width="73" height="35"/>
                                <accessibility key="accessibilityConfiguration" identifier="loginButton"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Войти"/>
                                <connections>
                                    <action selector="loginButtonTapped:" destination="pgF-WN-VaK" eventType="touchUpInside" id="NUz-s5-lcg"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LmK-d2-1gf">
                                <rect key="frame" x="103" y="342" width="189" height="35"/>
                                <accessibility key="accessibilityConfiguration" identifier="registerButton"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Зарегистрироваться"/>
                                <connections>
                                    <action selector="registerButtonTapped:" destination="pgF-WN-VaK" eventType="touchUpInside" id="MAu-kV-Xy5"/>
                                </connections>
                            </button>
...
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Подтвердите пароль" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ix4-Vv-iTy">
                                <rect key="frame" x="16" y="271" width="278" height="34"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="confirmTextField"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1l1-a8-lRd">
                                <rect key="frame" x="102" y="409" width="189" height="35"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                                <constraint firstAttribute="trailing" secondItem="arK-Uw-T6a" secondAttribute="trailing" constant="4" id="ZMW-Dm-hlh"/>
                                            </constraints>
                                        </collectionViewCellContentView>
                                        <size key="customSize" width="150" height="200"/>
                                        <connections>
                                            <outlet property="imageView" destination="f2f-zr-nh9" id="RVL-dg-vnu"/>
                                            <outlet property="nameLabel" destination="arK-Uw-T6a" id="808-wc-eAL"/>
                                        </connections>
                                    </collectionViewCell>
                                </cells>
                            </collectionView>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="ulN-tu-S9J"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                    </view>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" id="So7-Qe-KUK">
                        <barButtonItem key="rightBarButtonItem" title="Выйти" id="ZPw-h4-xSa">
                            <connections>
                                <action selector="logoutButtonTapped:" destination="R58-li-8Db" id="ky4-4A-rFr"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
...
